cambios en el index.js para el envio de datos a la segunda pagina

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="contenedor_botones">
                     <button class="boton_extra" style="float: left; width: 32%; border-radius: 5px; margin-right: 1%;">Llama</button>
                     <button class="boton_extra" style="float: left; width: 32%; border-radius: 5px; margin-left: 0.5%; margin-right: 0.5%;"
-                            onClick="app.expandir(Pablo Sanchez#698745123#C/ Mayor#+65º 37' 20.11, -52º 23' 20 )">Mas</button>
+                            onClick="app.expandir(Pablo)">Mas</button>
                     <button class="boton_extra" style="float: left; width: 32%; border-radius: 5px; margin-left: 1%;">Editar</button>
                 </div>
                 <div class="div_relleno"></div>
@@ -83,7 +83,7 @@
         <div data-role="collapsible">
             <h4 class="nombre">Pedro Garcia</h4>
             <div>
-                <label class="tlf">63245789</label>
+                <label class="tlf">632457891</label>
                 <label class="direccion">Avenida Diagonal</label>
                 <label class="gps">-55º 23' 7.11", +26º 65' 11.2"</label>
                 <div class="contenedor_botones">
